--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{% static 'gestao/css/base/variables.css' %}">
-    <link rel="stylesheet" href="{% static 'gestao/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'gestao/css/layout.css' %}">
     <link rel="stylesheet" href="{% static 'painel_cliente/css/components/buttons.css' %}">
     <link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
+    <link rel="stylesheet" href="{% static 'gestao/css/admin-theme.css' %}">
 
     {% block extra_head %}{% endblock %}
 </head>
