--- a/gestao/templates/admin_custom/emissoes.html
+++ b/gestao/templates/admin_custom/emissoes.html
@@ -19,7 +19,7 @@
             <button class="btn btn--ghost filter-toggle" type="button" data-filter-toggle aria-expanded="true">Mostrar filtros</button>
         </div>
         <div class="filter-body is-open" data-filter-panel>
-            <form method="get" class="form-grid">
+            <form method="get" class="filter-grid">
                 <div class="form-field">
                     <label class="form-label" for="cliente">Cliente</label>
                     <select name="cliente" id="cliente">
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="table-wrapper">
-            <table class="data-table">
+            <table class="data-table data-table--wide">
                 <thead>
                     <tr>
                         <th>Cliente</th>
